fixup! feat: dqx-yaml translator

--- a/internal/translate/dqxyaml/dqxyaml.go.tmpl
+++ b/internal/translate/dqxyaml/dqxyaml.go.tmpl
@@ -12,7 +12,7 @@
         - {{ . }}
 {{- end }}
 {{- else }}
-      {{ .Key }}: {{ .Value }}
+      {{ .Key }}: {{ yamlScalar .Value }}
 {{- end }}
 {{- end }}
 {{- end }}
