fixup! feat: dqx-yaml translator

--- a/internal/translate/dqxyaml/dqxyaml.go.tmpl
+++ b/internal/translate/dqxyaml/dqxyaml.go.tmpl
@@ -9,7 +9,7 @@
 {{- if .List }}
       {{ .Key }}:
 {{- range .List }}
-        - {{ . }}
+        - {{ yamlScalar . }}
 {{- end }}
 {{- else }}
       {{ .Key }}: {{ yamlScalar .Value }}
